--- a/cat-clicker-premium.html
+++ b/cat-clicker-premium.html
@@ -1,17 +1,20 @@
+<link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
 
-<div id="cat-menu">
-    <ul id="cat-list"></ul>
+<div id="conatiner">
+    <div id="cat-box">
+        <span id="cat-name"></span>
+        <div id="clicks-text">clicks: <span id="click-count"></span></div>
+        <div style="clear:both"></div>
+        <img id="cat-photo" src="" alt="" height="200px">
+    </div>
+    <div id="cat-menu">
+        <ul id="cat-list"></ul>
+    </div>
+
+    <div id="cat-box2"></div>
 </div>
 
-<div id="cat-box">
-    <span id="cat-name"></span>
-    <div id="clicks-text">clicks: <span id="click-count"></span></div>
-    <img id="cat-photo" src="" alt="" height="200px">
-</div>
-
-<div id="cat-box2"></div>
-
-<script src="cat-click-MVC.js"></script>
+<script src="app.js"></script>
 <!-- <script src="cat-click-OO.js"></script> -->
 <!-- <script src="cat-click.js"></script> -->
