Added DOM admin elements

--- a/cat-clicker-premium.html
+++ b/cat-clicker-premium.html
@@ -13,7 +13,29 @@
     </div>
 
     <div id="cat-box2"></div>
+
+    <div style="clear:both"></div>
+    <button type="button" id="admin-btn">Admin</button>
+
+    <div class="admin-box">
+        <div class="admin-input">
+            <span>Name: </span><input type="text" name="" value="" size="20"><br>
+        </div>
+        <div class="admin-input">
+            <span>Image URL: </span><input type="text" name="" value="" size="20"><br>
+        </div>
+        <div class="admin-input">
+            <span># Clicks : </span><input type="text" name="" value="" size="20">
+        </div>
+
+        <div style="clear:both"></div>
+        <button type="button" class="save-cancel-btn" id="cancel-btn">cancel</button>
+        <button type="button" class="save-cancel-btn" id="save-btn">save</button>
+
+    </div>
+
 </div>
+
 
 <script src="app.js"></script>
 <!-- <script src="cat-click-OO.js"></script> -->
