admin and cancel buttons functionality

--- a/cat-clicker-premium.html
+++ b/cat-clicker-premium.html
@@ -17,15 +17,15 @@
     <div style="clear:both"></div>
     <button type="button" id="admin-btn">Admin</button>
 
-    <div class="admin-box">
+    <div id="admin-box">
         <div class="admin-input">
-            <span>Name: </span><input type="text" name="" value="" size="20"><br>
+            <span class="admin-input-label">Name: </span><input type="text" name="" value="" size="20"><br>
         </div>
         <div class="admin-input">
-            <span>Image URL: </span><input type="text" name="" value="" size="20"><br>
+            <span class="admin-input-label">Image URL: </span><input type="text" name="" value="" size="20"><br>
         </div>
         <div class="admin-input">
-            <span># Clicks : </span><input type="text" name="" value="" size="20">
+            <span class="admin-input-label"># Clicks : </span><input type="text" name="" value="" size="20">
         </div>
 
         <div style="clear:both"></div>
