--- a/cat-clicker-premium.html
+++ b/cat-clicker-premium.html
@@ -6,7 +6,7 @@
         <span id="cat-name"></span>
         <div id="clicks-text">clicks: <span id="click-count"></span></div>
         <div style="clear:both"></div>
-        <img id="cat-photo" src="" alt="" height="200px">
+        <img class="cat-photo" id="cat-photo" src="" alt="" height="200px">
     </div>
     <div id="cat-menu">
         <ul id="cat-list"></ul>
@@ -38,5 +38,3 @@
 
 
 <script src="app.js"></script>
-<!-- <script src="cat-click-OO.js"></script> -->
-<!-- <script src="cat-click.js"></script> -->
