Admin fully functional

--- a/cat-clicker-premium.html
+++ b/cat-clicker-premium.html
@@ -19,13 +19,13 @@
 
     <div id="admin-box">
         <div class="admin-input">
-            <span class="admin-input-label">Name: </span><input type="text" name="" value="" size="20"><br>
+            <span class="admin-input-label">Name: </span><input type="text" id="name-input" value="" size="20"><br>
         </div>
         <div class="admin-input">
-            <span class="admin-input-label">Image URL: </span><input type="text" name="" value="" size="20"><br>
+            <span class="admin-input-label">Image URL: </span><input id="url-input" type="text" name="" value="" size="20"><br>
         </div>
         <div class="admin-input">
-            <span class="admin-input-label"># Clicks : </span><input type="text" name="" value="" size="20">
+            <span class="admin-input-label"># Clicks : </span><input id="clicks-input" type="text" name="" value="" size="20">
         </div>
 
         <div style="clear:both"></div>
